updated prettier rules

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
+  "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "all",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always"
 }
