--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,8 @@
   "printWidth": 80,
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
   "bracketSameLine": false,
